--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,14 @@
 angular2/
 devextreme/
 dojo/
+ej.widgets.all/
 extjs/
+fhir/
 mendixmodelsdk/
 sencha_touch/
 winjs/winjs-*
 winrt/
+yfiles/
 *-test.js
 *-test.ts
 *-tests.js
